[#4324] Adjust scrollbars on actor sheets to avoid width shifting
Uses the `scrollbar-gutter: stable` property on character & NPC
sheets and adjusted the right padding to avoid layout shifts when
expanding items causes the scrollbars to appear. This avoids the
issue of the expand control jumping out from under the user's
mouse after expansion.

Closes #4324

--- a/less/v2/character.less
+++ b/less/v2/character.less
@@ -216,8 +216,10 @@
       position: absolute;
       inset: 0;
       padding: 8px;
+      padding-inline-end: 0;
       overflow: hidden auto;
       scrollbar-width: thin;
+      scrollbar-gutter: stable;
       scrollbar-color: var(--dnd5e-color-scrollbar) transparent;
       transition: all 450ms ease;
 
